--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: sans-serif;
 }
 .navbar{
-    background-color: powderblue;
+    background-color: black;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -42,5 +42,77 @@
     justify-content: center;
     padding: o 1rem;
     height: 100%;
+ }
+ .navbar__btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 0 1rem;
+    width: 100%;
+ }
+ .button{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    padding: 10px, 20px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: blue;
+    color: antiquewhite;
+ }
+ .button:hover{
+    background: red;
+    transition: all 0.4s ease;
+ }
+ .navbar__links:hover{
+    color: red;
+    transition: all 0.4s ease;
+ }
+ @media screen and (max-width) {
+    .navbar__container{
+        display: flex;
+        justify-content: space-between;
+        height: 70px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1200px;
+        padding: 0;
+    }
+    .navbar__menu{
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: o;
+        transition: all 0.5s ease;
+        height: 60vh;
+        z-index: -1;
+    }
+    .navbar__menu.active{
+        background: black;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font-size: 1.6rem;
+    }
+    #navbar__logo{
+        padding: 25px;
+    }
+    .navbar__toogle.bar{
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.4s ease-in-out;
+        background: aliceblue;
+
+    }
+
  }
  
