--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0%;
     font-family: sans-serif;
+    
 }
 .navbar{
     background-color: black;
@@ -26,6 +27,16 @@
     padding: 0 50px;
 }
 
+#navbar__logo{
+    background-color: white;
+    background-image: linear-gradient(to top, red orange 100%);
+    background-size: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    
+}
+
 .navbar__menu{
     display: flex;
     align-items: center;
@@ -36,11 +47,11 @@
     height: 70px;
  }
  .navbar__links{
-    color: whitesmoke;
+    color: wheat;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: o 1rem;
+    padding: 0 1rem;
     height: 100%;
  }
  .navbar__btn{
@@ -60,6 +71,7 @@
     width: 100%;
     border: none;
     outline: none;
+    border-radius: 4px;
     background: blue;
     color: antiquewhite;
  }
@@ -71,7 +83,7 @@
     color: red;
     transition: all 0.4s ease;
  }
- @media screen and (max-width) {
+ @media screen and (max-width: 960px) {
     .navbar__container{
         display: flex;
         justify-content: space-between;
@@ -81,14 +93,15 @@
         max-width: 1200px;
         padding: 0;
     }
+    
     .navbar__menu{
         display: grid;
         grid-template-columns: auto;
         margin: 0;
         width: 100%;
         position: absolute;
-        top: -1000px;
-        opacity: o;
+        /* top: -1000px;
+        opacity: 0; */
         transition: all 0.5s ease;
         height: 60vh;
         z-index: -1;
@@ -103,16 +116,41 @@
         font-size: 1.6rem;
     }
     #navbar__logo{
-        padding: 25px;
+        padding: left 25px; 
     }
-    .navbar__toogle.bar{
+    .navbar__toggle .bar{
         width: 25px;
         height: 3px;
         margin: 5px auto;
         transition: all 0.4s ease-in-out;
-        background: aliceblue;
+        background: blue;
 
     }
+    .navbar__item{
+        width: 100%;
+    }
+    .navbar__links{
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+    #menu{
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+    .navbar__btn{
+        padding-bottom: 2rem;
+    }
+    .button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+    }
+     
 
  }
  
