--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     font-family: sans-serif;
     
 }
+
+
 .navbar{
     background-color: black;
     height: 80px;
@@ -73,7 +75,7 @@
     outline: none;
     border-radius: 4px;
     background: blue;
-    color: antiquewhite;
+    color: purple
  }
  .button:hover{
     background: red;
@@ -173,6 +175,8 @@ transform: translateY(8px) rotate(45deg);
 
 /* Hero section */
 .main__container{
+
+    position: cover;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -183,4 +187,65 @@ transform: translateY(8px) rotate(45deg);
     width: 100%;
     max-width: 1300px;
     padding: 0 50px;
+}
+.main__content h1{
+    font-size: 1rem;
+    background-color: none;
+    background-image: linear-gradient(to top, white 0%,white 100%);
+margin-right: 70px;
+}
+.main__content h2{
+    font-size: 1rem;
+    background-color: none;
+    background-image: linear-gradient(to top, white 0%, white 100%);
+    margin-right: 300px;
+}
+.main__img__container{
+    margin-left: 30px;
+}
+
+  
+
+.main__btn{
+    font-size: 1rem;
+    background-image: linear-gradient((to top, blue 0%, blue 100%));
+    padding: 2px 3px;
+    border-radius: 4px;
+    color: blueviolet;
+    margin-top: 2rem;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.4s;
+}
+.main__btn a{
+    position: relative;
+    z-index: 2;
+    color: white;
+    background-color: blue
+
+}
+.main__btn:after {
+    position: relative;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 0;
+    background: blue;
+    transition: all 0.4s;
+    border-radius: 4px;
+}
+.main__btn:hover{
+    color: deeppink;
+}
+.main__btn:hover::after{
+    width: 100%;
+}
+.box2 img{
+    width: 300px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.box2 p{
+    margin-left: 0;
+    margin-right: 20px;
 }
