--- a/style.css
+++ b/style.css
@@ -255,13 +255,13 @@ margin-right: 70px;
     
     background-color: none;
     display: flex;
-    margin-top: 15%;
+   text-align: center;
+   margin-right: 1940px;
 }
-.box2 h1{
+.box h1{
+    margin-top: 3%;
     text-align: center;
-    margin-top: -11%;
     justify-content: center;
-
 }
 #sahiwal{
     float: left;
@@ -279,13 +279,17 @@ margin-right: 70px;
     justify-content: center;
 }
 #jersey img{
-    width: 300px;}
-
-   #ayrshire{
-justify-content: center;
-text-align: center;
-   
+    width: 300px;
+margin-left: 220px;
 }
+
+    
+
+ 
+#ayrshire{
+    justify-content: center;
+
+}    
 #ayrshire img{
     width: 300px;
     text-align: center;
@@ -343,6 +347,12 @@ footer{
 #box1 h1{
     text-align: center;
     text-align: justify;
+}
+#box{
+    text-align: center;
+    justify-content: center;
+    margin-top: -25%;
+
 }
 #somali{
     margin-top: 70px;
